Fix spacing key used

--- a/src/06_components/_buttons.scss
+++ b/src/06_components/_buttons.scss
@@ -4,7 +4,7 @@
 
 .button {
     display: inline-block;
-    margin-bottom: map-get($spaces, xxs);
+    margin-bottom: map-get($spaces, xxxs);
     padding: $button-padding-sm;
     border: $button-outlined-border-width solid $button-filled-bg;
     border-radius: $button-border-radius;
